# plotting

./: CMakeLists.txt  README.md  main.cpp
exec/: how_to_use_notepad.txt  how_to_use_notepad_eng.txt
exec/json/: settings.json
exec/text_files/: how_to_use_notepad_rus.txt  rus.txt
headers/: header.hpp
include/: application.h  assign.cpp  exprtk.hpp  gui_window.h  header.hpp  mainwindow.cpp  mainwindow.ui  qt_sfml_window.cpp  qt_window.h  sfml_window.h
json/: settings.json
src/: main.cpp  mainwindow.ui  points.cpp  points.h  qt_window.cpp  qt_window.h  sfml_window.cpp  sfml_window.h
